# esp32-smart-env-monitor

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/bh1750/: CMakeLists.txt  bh1750.c
components/bh1750/include/: bh1750.h
components/dht11/: dht11.c
components/dht11/include/: dht11.h
components/mq135/: mq135.c
components/mq135/include/: mq135.h
components/ssd1306/: ssd1306.c
components/ssd1306/include/: ssd1306.h
docs/: wiring.md  面试题.md
main/: CMakeLists.txt  aliyun_mqtt_client.c  aliyun_mqtt_client.h  display_task.c  display_task.h  main.c  power_manager.c  power_manager.h  sensor_task.c  sensor_task.h  smart_env_config.h  task_comm.c  task_comm.h  upload_task.c  upload_task.h  wifi_manager.c  wifi_manager.h
